fix color contrast

--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -104,7 +104,7 @@ html {
 }
 
 .main-nav li:last-child a {
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid #FAFAFA;
 }
 
 .main-nav li {
